force-app/main/default/objects/Elysia__c.object
<CustomObject>
    <description>Stores Elysia Generative AI report output for Lead, Contact, Account, and Opportunity research. Used by Informa sales to reduce research time and improve productivity.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the relationship to the Account relevant to the Report</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Elysia Reports</relationshipLabel>
        <relationshipName>Elysia_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the relationship to the Contact relevant to the Report</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Elysia Reports</relationshipLabel>
        <relationshipName>Elysia_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Elysia_Report_Date__c</fullName>
        <label>Elysia Report Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Elysia_Report__c</fullName>
        <description>Holds the Elysia Report output</description>
        <label>Elysia Report</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Elysia_RequestId__c</fullName>
        <label>Elysia RequestId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elysia_Response__c</fullName>
        <label>Elysia Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the relationship to the Lead relevant to the Report</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Elysia Reports</relationshipLabel>
        <relationshipName>Elysia_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Holds the object name from which the Elysia report was requested</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Holds the name of the type of Elysia report generated</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elysia Report</fullName>
                    <default>true</default>
                    <label>Elysia Report</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Elysia</label>
    <nameField>
        <displayFormat>ELY-{0000}</displayFormat>
        <label>Elysia Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elysia Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>